# wav2sleep

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.env  pyproject.toml  setup.cfg
checkpoints/wav2sleep/: config.yaml
checkpoints/wav2sleep-eog/: config.yaml
config/: main.yaml
config/debug/: light.yaml  medium.yaml  none.yaml
config/hydra/launcher/: slurm.yaml
config/inputs/: all.yaml
config/model/: wav2sleep.yaml
config/training/: main.yaml
config/training/callbacks/: checkpointing.yaml  progress.yaml
config/training/optimizer/: adam.yaml  adamw.yaml
config/training/scheduler/: expdecay.yaml
environment/: conda.yaml  requirements.txt  requirements_dev.txt
examples/: predict.py
preprocessing/: 0_fix_edfs.py  1_ingest.py  1_slurm_ingest.sh  2a_create_splits_paper.py  2b_create_census_split.py  README.md
scripts/: predict.py  train.py  upload_to_hub.py
scripts/config/: main.yaml
scripts/config/datasets/: all.yaml  all_no_cfs_ppg.yaml  eog.yaml  mesa.yaml  shhs.yaml
scripts/config/debug/: heavy.yaml
scripts/config/hydra/callbacks/: git.yaml  log.yaml  mlflow.yaml  timer.yaml
scripts/config/hydra/launcher/: slurm.yaml
scripts/config/inputs/cardiorespiratory/: all.yaml  ecg.yaml  no_ppg.yaml  ppg.yaml
scripts/config/inputs/neural/: eog.yaml  eog_l.yaml  eog_r.yaml
scripts/config/model/: ppgnet.yaml  wav2sleep.yaml
scripts/config/training/: main.yaml
scripts/config/training/callbacks/: early_stopping.yaml  ema.yaml  lr_monitor.yaml  progress.yaml
scripts/config/training/optimizer/: adamw.yaml
scripts/config/training/scheduler/: decay.yaml  expdecay.yaml
scripts/config/training/trainer/profiler/: pytorch.yaml
src/wav2sleep/: __init__.py  api.py  hub.py  log.py  parallel.py  plotting.py  settings.py  utils.py
src/wav2sleep/cli/: data_utils.py  main.py  model_utils.py
src/wav2sleep/data/: datamodule.py  dataset.py  edf.py  normalization.py  nsrr.py  preprocessing.py  txt.py  utils.py  xml.py
src/wav2sleep/models/: blocks.py  ppgnet.py  utils.py  wav2sleep.py
src/wav2sleep/trainer/: callbacks.py  main.py  scheduler.py
tests/data/: test_normalization.py
tests/model/: test_causality.py  test_compile.py
