[metadata]
name = wav2sleep
version = file: src/wav2sleep/VERSION
description = Implementation of wav2sleep.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
maintainers =
    Jonathan Carter
project_urls =

[options]
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
zip_safe = False
python_requires = >=3.10
[options.packages.find]
where = src
